# turbine

./: .gitignore  README.md  package.json
backend/: .dockerignore  .gitignore  .prefectignore  Taskfile.yml  api.Dockerfile  app.py  cloud.tf  config.py  config.yaml  daemon.Dockerfile  daemon.py  docker-compose.yaml  experiment.py  notes  pyproject.toml  readme.md  requirements.txt  run.py  sample-cost  sample-terraform  todo.md  wsgi.py
backend/alembic/: env.py
backend/alembic/versions/: 2023_10_26_1122-fc6c8ad592ba_initial_migration.py  2023_10_27_1854-a1e50eb56d0e_add_user_internal_column.py  2023_10_31_1406-906d2f3c352d_create_separate_index_table.py  2023_11_04_0047-8e81ae0df40f_initial_migration.py
backend/docker/dev/: common.Dockerfile  docker-compose.yaml  initdb.sh  turbine-api.Dockerfile  turbine-daemon.Dockerfile  turbine-worker.Dockerfile
backend/docker/prod/: api.Dockerfile  common.Dockerfile  docker-compose.yaml  flower.Dockerfile  htpasswd  nginx.conf  turbine-api.Dockerfile  turbine-daemon.Dockerfile  turbine-worker.Dockerfile  worker.Dockerfile
backend/docker/test/: docker-compose.yaml
backend/local/: mongo-seed.js  postgres-init.sql  postgresql.conf
backend/scripts/: config.py  create-milvus-collection.py  load-clerk-users.py
backend/src/: agent.py  app.py  config.py  core.py  debezium_kafka.py  models.py  run.py  schema.py  script.py  utils.py
backend/src/api/: app.py  auth.py  schema.py  utils.py
backend/src/api/resource/: datasource.py  project.py  search.py
backend/src/cloud/: aws.py
backend/src/daemon/: daemon.py
backend/src/data_source/: __init__.py  google_sheets.py  interface.py  s3.py
backend/src/data_source/debezium/: debezium.py
backend/src/datasource/: debezium.py  google_sheets.py  interface.py  mongo.py  postgres.py  s3.py
backend/src/db/: models.py
backend/src/embedding_model/: __init__.py  hugging_face.py  interface.py  openai.py  utils.py
backend/src/inquest/: api.py  script.py
backend/src/integration/: postgres.py
backend/src/llm/: agent.py  chain.py  memory.py  tools.py
backend/src/model/: interface.py  openai.py
backend/src/sources/: mongo.py  postgres.py
backend/src/vector_db/: interface.py  milvus.py  pinecone.py
backend/src/vectordb/: __init__.py  interface.py  milvus.py  pinecone.py
backend/tests/: config.py  test_openai_model.py
backend/tests/embedding_models/: common.py  test_huggingface.py  test_huggingface_model.py  test_interface.py  test_openai.py  test_openai_model.py  utils.py
backend/tests/vector_databases/: common.py  test_interface.py  test_milvus.py  test_milvus_vector_db.py  test_pinecone.py  test_pinecone_vector_db.py  utils.py
backend/turbine/: config.py  schema.py  types.py  utils.py
backend/turbine/api/: app.py  auth.py
backend/turbine/data_source/: __init__.py  interface.py  s3_text.py
backend/turbine/data_sources/: __init__.py  interface.py  s3.py  s3_text.py
backend/turbine/database/: models.py
backend/turbine/db/: models.py
backend/turbine/embedding_model/: __init__.py  hugging_face.py  interface.py  openai.py  utils.py
backend/turbine/embedding_models/: hugging_face.py  interface.py  openai.py
backend/turbine/file_parsers/: interface.py  pdf_parser.py  utils.py
backend/turbine/flows/: __init__.py  common.py  flows.py  process_files.py  run_pipeline.py  sync_data_source.py
backend/turbine/legacy/: daemon.py  milvus.py  schema.py  utils.py
backend/turbine/schema/: __init__.py  index.py  pipeline.py  task.py
backend/turbine/schemas/: __init__.py  data_source.py  index.py  pipeline.py  task.py
backend/turbine/vector_database/: __init__.py  interface.py  milvus.py  pinecone.py
backend/turbine/vector_databases/: chroma.py  interface.py  milvus.py  pinecone.py  types.py  weaviate.py
backend/turbine/vector_db/: __init__.py  interface.py  milvus.py  pinecone.py
backend/turbine/worker/: flows.py  worker.py
backend/turbine_sdk/: config.py  pyproject.toml  turbine.py  upload.sh
backend/turbine_sdk/api/: __init__.py  project.py  search.py
backend/turbine_sdk/exceptions/: exceptions.py
blog/: go.mod
sdks/python/: .gitignore  mkdocs.yml  pyproject.toml  setup.py  test.py  upload.sh
sdks/python/docs/: index.md  types.md
sdks/python/turbine/: __init__.py  turbine.py  types.py
src/: app.py  (+4 more)
(+179 files in other folders)
