[tool.poetry]
name = "turbine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
kafka-python = "^2.0.2"
requests = "^2.31.0"
peewee = "^3.16.3"
python-dotenv = "^1.0.0"
tiktoken = "^0.4.0"
psycopg2-binary = "^2.9.7"
pymongo = "^4.4.1"
pymilvus = "^2.3.0"
pinecone-client = "^2.2.2"
flask-pydantic = "^0.11.0"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
huggingface-hub = "^0.16.4"
jsonpath-ng = "^1.5.3"
shortuuid = "^1.0.11"
celery = "^5.3.4"
langchain = "^0.0.312"
boto3 = "^1.28.62"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
