[tool.poetry]
name = "turbine"
version = "0.1.0"
description = "Data pipeline for LLM apps"
authors = ["Sumit Ghosh <sumit@useturbine.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
pymilvus = "^2.3.0"
pinecone-client = "^2.2.2"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
huggingface-hub = "^0.16.4"
langchain = "^0.0.312"
boto3 = "^1.28.62"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.32.0"}
python-multipart = "^0.0.6"
prefect = "^2.13.8"
more-itertools = "^10.1.0"
prefect-dask = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
