[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "turbine-sdk"
version = "0.0.1"
description= "SDK designed to simplify making API requests to useturbine.com's API offerings."
authors = [{"name"="Turbine Team", "email"="ankit@useturbine.com"}]
readme = "README.md"
homepage = "https://github.com/useturbine/turbine"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

dependencies = ["httpx", "requests"]

[project.urls]
Repository = "https://github.com/useturbine/turbine"
