[tool.poetry]
name = "py-turbine"
version = "0.0.1"
description = "Python SDK for Turbine"
authors = ["Ankit Solanki <ankit@useturbine.com>", "Sumit Ghosh <sumit@useturbine.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.24.1"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
