[tool.poetry]
name = "turbine-sdk"
version = "0.0.2"
description = "Python SDK for Turbine"
authors = ["Ankit Solanki <ankit@useturbine.com>", "Sumit Ghosh <sumit@useturbine.com>"]
readme = "README.md"
packages = [{include = "turbine"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
